cmake_minimum_required(VERSION 3.0.0)
project(readpcd VERSION 0.1.0)

# include(CTest)
find_package(PCL 1.2 REQUIRED)
include_directories($(PCL_INCLUDE_DIRS))
link_directories(PCL_LIBRARY_DIRS)
add_definitions($(PCL_DEFINITIONS))
enable_testing()

add_executable(readpcd main.cpp)
target_link_libraries(readpcd $(PCL_LIBRARYS))

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

# cmake_minimum_required(VERSION 3.0.0)
# project(matrix_transform VERSION 0.1.0)
# set(CMAKE_BUILD_TYPE Debug)
# find_package(PCL 1.12 REQUIRED )
# include_directories(${PCL_INCLUDE_DIRS})
# link_directories(${PCL_LIBRARY_DIRS})
# add_definitions(${PCL_DEFINITIONS})

# # include(CTest)
# enable_testing()
# set(SOURCE_LIST main.cpp)
# add_executable(matrix_transform ${SOURCE_LIST})
# target_link_libraries(matrix_transform ${PCL_LIBRARIES})
# set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -gdwarf-2")